# sdk

./: Cargo.toml  README.md  Taskfile.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: .docs.yml
crates/solti-api/: Cargo.toml  build.rs
crates/solti-api/proto/solti/v1/: api.proto  types.proto
crates/solti-api/src/: adapter.rs  convert.rs  error.rs  grpc.rs  handler.rs  http.rs  lib.rs
crates/solti-core/: Cargo.toml
crates/solti-core/src/: lib.rs  policy.rs  system.rs
crates/solti-core/src/map/: mod.rs
crates/solti-core/src/metrics/: mod.rs
crates/solti-core/src/router/: mod.rs
crates/solti-core/src/runner/: context.rs  mod.rs
crates/solti-core/src/state/: mod.rs  subscriber.rs
crates/solti-core/src/supervisor/: mod.rs
crates/solti-discover/: Cargo.toml
crates/solti-discover/proto/v1/: sync.proto
crates/solti-discover/src/: lib.rs
crates/solti-discover/src/tasks/: sync.rs
crates/solti-exec/: Cargo.toml
crates/solti-exec/src/: metrics.rs
crates/solti-exec/src/subprocess/: mod.rs  runner.rs  task.rs
crates/solti-exec/src/utils/: cgroups.rs  limits.rs  security.rs
crates/solti-model/: Cargo.toml
crates/solti-model/src/domain/: task_id.rs  task_status.rs
crates/solti-model/src/spec/: create.rs
crates/solti-observe/: Cargo.toml
crates/solti-observe/src/logger/: config.rs  mod.rs
crates/solti-observe/src/logger/object/: level.rs  timezone.rs
crates/solti-observe/src/logger/tasks/: timezone_sync.rs
crates/solti-prometheus/: Cargo.toml
crates/solti-prometheus/src/: backend.rs  lib.rs
crates/tno-agentd/: Cargo.toml
crates/tno-agentd/src/: main.rs
crates/tno-api/: Cargo.toml  build.rs
crates/tno-api/proto/lighthouse/v1/: discovery.proto
crates/tno-api/proto/tno/v1/: api.proto  types.proto
crates/tno-api/src/: adapter.rs  convert.rs  error.rs  grpc.rs  handler.rs  http.rs  lib.rs
crates/tno-api/src/autodiscovery/: config.rs  mod.rs  task.rs
crates/tno-api/src/discovery/: config.rs  mod.rs  task.rs
crates/tno-core/: Cargo.toml
crates/tno-core/src/: lib.rs  system.rs
crates/tno-core/src/map/: mapping.rs  mod.rs
crates/tno-core/src/router/: mod.rs
crates/tno-core/src/runner/: context.rs  mod.rs
crates/tno-core/src/state/: mod.rs  subscriber.rs
crates/tno-core/src/supervisor/: mod.rs
crates/tno-discover/: Cargo.toml  build.rs
crates/tno-discover/proto/v1/: sync.proto
crates/tno-discover/src/: config.rs  errors.rs  lib.rs
crates/tno-discover/src/tasks/: mod.rs  sync.rs
crates/tno-exec/: Cargo.toml
crates/tno-exec/src/: error.rs  lib.rs  util.rs
crates/tno-exec/src/fn/: mod.rs
crates/tno-exec/src/proc/: mod.rs  shell.rs
crates/tno-exec/src/subprocess/: backend.rs  config.rs  mod.rs  runner.rs  task.rs
crates/tno-exec/src/utils/: cgroups.rs  limits.rs  log.rs  mod.rs  security.rs
crates/tno-model/src/: lib.rs
crates/tno-model/src/domain/: env.rs  mod.rs  runner_labels.rs  task_env.rs  task_info.rs  task_query.rs
crates/tno-model/src/kind/: task.rs
crates/tno-model/src/spec/: create.rs
crates/tno-model/src/strategy/: admission.rs  restart.rs
crates/tno-observe/: Cargo.toml
crates/tno-observe/src/: lib.rs
crates/tno-observe/src/logger/: config.rs  error.rs  format.rs  log.rs  logger.rs  mod.rs
crates/tno-observe/src/logger/object/: mod.rs  timezone.rs
crates/tno-observe/src/logger/tasks/: timezone_sync.rs  timezone_sync_controller.rs
crates/tno-observe/src/subscriber/: mod.rs  view.rs
crates/tno-observe/src/subscriber/journal/: mod.rs
crates/tno-prometheus/src/: lib.rs
examples/agentd/: Cargo.toml
examples/agentd/src/: main.rs
examples/autodiscovery/: Cargo.toml
examples/autodiscovery/src/: main.rs
examples/discovery/: Cargo.toml  README.md
examples/discovery/src/: main.rs
examples/grpc-server/: Cargo.toml  README.md
examples/grpc-server/src/: main.rs
examples/http-server/: Cargo.toml  README.md
examples/http-server/src/: main.rs
