[workspace]
members = [
    "crates/solti-prometheus",
    "crates/solti-discover",
    "crates/solti-observe",
    "crates/solti-model",
    "crates/solti-core",
    "crates/solti-exec",
    "crates/solti-api",

    "examples/grpc-server",
    "examples/http-server",
    "examples/discovery",
    "examples/agentd",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
tracing-subscriber = { version = "0.3" }
protoc-bin-vendored = { version = "3" }
tokio = { version = "1" }
tokio-util = "0.7.17"
time = { version = "0.3" }
serde = { version = "1", features = ["derive"] }
tracing-journald = "0.3.1"
taskvisor = { version = "0.1.0" }
prometheus = "0.14.0"
reqwest = "0.13.1"
async-trait = "0.1"
serde_json = "1"
thiserror = "2"
tracing = "0.1"
anyhow  = "1"
libc = "0.2.177"
axum = "0.8.7"
hostname = "0.4.2"
uuid = "1.19.0"

tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"