[package]
name = "solti-discover"
version = "0.0.1"
edition = "2024"

[features]
default = []

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }

serde_json = { workspace = true }
tokio-util = { workspace = true }
taskvisor = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

solti-model = { path = "../solti-model" }
solti-core = { path = "../solti-core" }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }