[package]
name = "solti-observe"
version = "0.0.1"
edition = "2024"

[features]
default = []
timezone-sync = ["dep:taskvisor", "dep:tokio-util", "dep:solti-model"]
subscriber = ["dep:taskvisor", "dep:async-trait"]

[dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
time = { workspace = true, features = ["formatting", "local-offset"] }
serde = { workspace = true, features = ["derive"] }
tracing-journald = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

taskvisor = { workspace = true, optional = true, features = ["controller"] }
solti-model = { path = "../solti-model", optional = true }
async-trait = { workspace = true, optional = true}
tokio-util = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }