[package]
name = "tno-discover"
version = "0.0.1"
edition = "2024"

[features]
default = []

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }