[package]
name = "tno-discover"
version = "0.0.1"
edition = "2024"

[features]
default = []

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }

tokio-util = { workspace = true }
taskvisor = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

tno-model = { path = "../tno-model" }
tno-core = { path = "../tno-core" }
serde_json = "1.0.145"

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }