[package]
name = "tno-exec"
version = "0.0.1"
edition = "2024"

[features]
default = ["proc"]
proc = []
shell = ["proc"]

[dependencies]
taskvisor = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

tno-core = { path = "../tno-core" }
tno-model = { path = "../tno-model" }

tokio = { version = "1", features = ["process", "io-util", "macros", "rt"] }
tokio-util = "0.7.17"
anyhow = "1"
cfg-if = "1"