[package]
name = "tno-exec"
version = "0.0.1"
edition = "2024"

[features]
default = []
exec = []
shell = ["exec"]
wasm = []
container = []

[dependencies]
taskvisor = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

tno-core = { path = "../tno-core" }
tno-model = { path = "../tno-model" }

tokio = { version = "1", features = ["sync"] }