[package]
name = "agentd"
version = "0.0.1"
edition = "2024"

[dependencies]
solti-observe = { path = "../../crates/solti-observe", features = ["timezone-sync", "subscriber"] }
solti-exec    = { path = "../../crates/solti-exec", features = ["subprocess"] }
solti-core    = { path = "../../crates/solti-core" }
solti-model   = { path = "../../crates/solti-model" }

taskvisor  = { workspace = true }
tracing    = { workspace = true }
anyhow     = { workspace = true }
tokio      = { workspace = true }