[package]
name = "http-server"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
solti-prometheus = { path = "../../crates/solti-prometheus" }
solti-observe = { path = "../../crates/solti-observe", features = ["timezone-sync", "subscriber"] }
solti-exec = { path = "../../crates/solti-exec", features = ["subprocess"] }
solti-api = { path = "../../crates/solti-api", features = ["http"] }
solti-core = { path = "../../crates/solti-core" }
solti-model = { path = "../../crates/solti-model" }

tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
taskvisor = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }